# S32K144cmake

./: CMakeLists.txt  Configuration.mex  README.md  build.sh  description.txt
Debug_FLASH/: Wdg_Example_S32K144.args  Wdg_Example_S32K144.elf  Wdg_Example_S32K144.map  makefile
Debug_FLASH/Project_Settings/Startup_Code/: Vector_Table.args  exceptions.c.000i.cgraph  exceptions.c.016i.visibility  exceptions.c.048i.remove_symbols  exceptions.c.068i.whole-program  exceptions.c.071i.devirt  exceptions.c.072i.cp  exceptions.c.075i.fnsummary  exceptions.c.076i.inline  exceptions.c.077i.pure-const  exceptions.c.079i.static-var  exceptions.d  nvic.c.000i.cgraph  nvic.c.016i.visibility  nvic.c.048i.remove_symbols  nvic.c.068i.whole-program  nvic.c.071i.devirt  (+26 more)
Debug_FLASH/board/: Clock_Ip_Cfg.args  Clock_Ip_Cfg.d  Clock_Ip_PBcfg.c.000i.cgraph  Clock_Ip_PBcfg.c.016i.visibility  Clock_Ip_PBcfg.c.048i.remove_symbols  Clock_Ip_PBcfg.c.068i.whole-program  Clock_Ip_PBcfg.c.072i.cp  Clock_Ip_PBcfg.c.075i.fnsummary  Clock_Ip_PBcfg.c.076i.inline  Clock_Ip_PBcfg.d  Port_Ci_Port_Ip_Cfg.d
Debug_FLASH/src/: main.c.000i.cgraph  main.c.000i.ipa-clones  main.c.016i.visibility  main.c.017i.build_ssa_passes  main.c.022i.opt_local_passes  main.c.048i.remove_symbols  main.c.068i.whole-program  main.c.069i.profile_estimate  main.c.070i.icf  main.c.071i.devirt  main.c.072i.cp  main.c.075i.fnsummary  main.c.076i.inline  main.c.077i.pure-const  main.c.079i.static-var  main.c.081i.comdats  main.d  main.su
Project_Settings/: CMakeLists.txt
Project_Settings/Debugger/: Wdg_Example_S32K144_Debug_FLASH_PNE.launch
Project_Settings/Linker_Files/: linker_flash_s32k144.ld
RTD/: CMakeLists.txt
RTD/base_include/: S32K116.h  S32K116_ADC.h  S32K116_AIPS.h  S32K116_CMP.h  S32K116_CMU.h  S32K116_COMMON.h  S32K116_CRC.h  S32K116_DMA.h  S32K116_DMAMUX.h  S32K116_EIM.h  S32K116_ERM.h  S32K116_FLEXCAN.h  S32K116_FLEXIO.h  S32K116_FTFC.h  S32K116_FTM.h  S32K116_GPIO.h  S32K116_LPI2C.h  S32K116_LPIT.h  S32K116_LPSPI.h  S32K116_LPTMR.h  S32K116_LPUART.h  S32K116_M0.svd  S32K116_MCM.h  S32K116_MPU.h  S32K116_MSCM.h  S32K116_MTB_DWT.h  S32K116_PCC.h  S32K116_PDB.h  S32K116_PMC.h  S32K116_PORT.h  S32K116_RCM.h  S32K116_RTC.h  S32K116_SCG.h  S32K116_SIM.h  S32K116_SMC.h  S32K116_TRGMUX.h  S32K116_WDOG.h  S32K118.h  S32K118_ADC.h  S32K118_AIPS.h  (+225 more)
RTD/include/: Ewm_Ip.h  Ewm_Ip_FeatureDefines.h  Ewm_Ip_Types.h  Gpt.h  Gpt_EnvCfg.h  Gpt_Ipw.h  Gpt_Ipw_Irq.h  Gpt_Ipw_Types.h  Gpt_Irq.h  LPit_Gpt_Ip.h  LPit_Gpt_Ip_Types.h  Lptmr_Gpt_Ip.h  Lptmr_Gpt_Ip_Types.h  Mcu_Dem_Wrapper.h  SRtc_Ip.h  SRtc_Ip_Types.h  SchM_Wdg.h  WdgIf.h  WdgIf_Cfg.h  WdgIf_Types.h  Wdg_43_Instance0.h  Wdg_43_Instance1.h  Wdg_Channel.h  Wdg_ChannelTypes.h  Wdg_EnvCfg.h  Wdg_Ipw.h  Wdg_Ipw_Types.h  Wdog_Ip.h  Wdog_Ip_FeatureDefines.h  Wdog_Ip_Types.h
RTD/src/: Ewm_Ip.c  Gpt.c  Gpt_Ipw.c  LPit_Gpt_Ip.c  Lptmr_Gpt_Ip.c  Mcu_Dem_Wrapper.c  SRtc_Ip.c  SchM_Wdg.c  WdgIf.c  Wdg_43_Instance0.c  Wdg_43_Instance1.c  Wdg_Channel.c  Wdg_Ipw.c  Wdg_Ipw_Irq.c  Wdog_Ip.c
board/: CMakelists.txt  Clock_Ip_PBcfg.c  Port_Ci_Port_Ip_Cfg.c  Port_Ci_Port_Ip_Cfg.h
generate/: CMakeLists.txt
generate/IntCtrl_Ip/: IntCtrl_Ip_Cfg.c  IntCtrl_Ip_Cfg.h  IntCtrl_Ip_CfgDefines.h
generate/System_Ip/: System_Ip_Cfg.h  System_Ip_CfgDefines.h
generate/include/: Ewm_Ip_Cfg_Defines.h  Ewm_Ip_DeviceRegisters.h  Ewm_Ip_VS_0_PBcfg.h  Ftm_Gpt_Ip_Cfg.h  Ftm_Gpt_Ip_VS_0_PBcfg.h  Gpt_Cfg.h  Gpt_Ipw_VS_0_PBcfg.h  Gpt_VS_0_PBcfg.h  LPit_Gpt_Ip_Cfg.h  LPit_Gpt_Ip_Cfg_Defines.h  LPit_Gpt_Ip_VS_0_PBcfg.h  Lptmr_Gpt_Ip_Cfg.h  Lptmr_Gpt_Ip_Cfg_Defines.h  Lptmr_Gpt_Ip_VS_0_PBcfg.h  Mcu_Cfg.h  Mcu_VS_0_PBcfg.h  Platform_Cfg.h  Platform_CfgDefines.h  Platform_Ipw_Cfg.h  Power_Ip_Cfg.h  Power_Ip_Cfg_Defines.h  Power_Ip_VS_0_PBcfg.h  Ram_Ip_Cfg.h  Ram_Ip_Cfg_Defines.h  Ram_Ip_VS_0_PBcfg.h  SRtc_Ip_Cfg.h  SRtc_Ip_Cfg_Defines.h  SRtc_Ip_VS_0_PBcfg.h  Wdg_43_Instance0_Ipw_VS_0_PBcfg.h  Wdg_43_Instance0_VS_0_PBcfg.h  Wdg_43_Instance1_Ipw_VS_0_PBcfg.h  Wdg_43_Instance1_VS_0_PBcfg.h  Wdg_Cfg.h  Wdg_CfgExt.h  Wdg_Cfg_Defines.h  Wdg_Ipw_Cfg_Defines.h  Wdog_Ip_Cfg_Defines.h  Wdog_Ip_DeviceRegisters.h  Wdog_Ip_VS_0_PBcfg.h  modules.h
generate/src/: Ewm_Ip_VS_0_PBcfg.c  Ftm_Gpt_Ip_VS_0_PBcfg.c  Gpt_Cfg.c  Gpt_Ipw_VS_0_PBcfg.c  Gpt_VS_0_PBcfg.c  LPit_Gpt_Ip_VS_0_PBcfg.c  Lptmr_Gpt_Ip_VS_0_PBcfg.c  Mcu_Cfg.c  Mcu_VS_0_PBcfg.c  Platform_Cfg.c  Platform_Ipw_Cfg.c  Power_Ip_Cfg.c  Power_Ip_VS_0_PBcfg.c  Ram_Ip_Cfg.c  Ram_Ip_VS_0_PBcfg.c  SRtc_Ip_VS_0_PBcfg.c  Wdg_43_Instance0_Cfg.c  Wdg_43_Instance0_Ipw_VS_0_PBcfg.c  Wdg_43_Instance0_VS_0_PBcfg.c  Wdg_43_Instance1_Cfg.c  Wdg_43_Instance1_Ipw_VS_0_PBcfg.c  Wdg_43_Instance1_VS_0_PBcfg.c  Wdg_CfgExt.c  Wdog_Ip_VS_0_PBcfg.c
src/: main.c
(+849 files in other folders)
